# devlock

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json  mise.toml
.github/: renovate.json
.github/workflows/: ci.yaml  codeql.yaml  docs.yaml  release.yaml
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.md  quickstart.md
docs/src/content/docs/guides/: architecture.md  claude.md  custom-agents.md  custom-profiles.md  inspect.md  logs.md  overrides.md  running.md  shell.md  troubleshooting.md
docs/src/content/docs/guides/agents/: claude.md
docs/src/content/docs/guides/profiles/: base.md  (+2 more)
docs/src/content/docs/reference/: agent-schema.md  cli.md  environment.md  path-buckets.md  profile-schema.md  proxy.md  security-model.md  variables.md
policy/agents/: claude.yaml  test.yaml
policy/profiles/: base.yaml  default.yaml  security-probe.yaml
policy/profiles/partials/: devcontainer.yaml  git.yaml  github.yaml  homebrew.yaml  mise.yaml  rust.yaml  vscode.yaml
src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  path_safety.rs  seccomp.rs  sys.rs  yaml_agent.rs
src/policy/: agent.rs  bundled.rs  filesystem.rs  install.rs  mod.rs  seccomp.rs  seccomp.yaml  yaml_merge.rs
src/proxy/: auth.rs  error.rs  http.rs  mod.rs  server.rs  state.rs
src/sandbox/: error.rs  exec.rs  landlock.rs  mod.rs  parent.rs  paths.rs  privs.rs  proxy_restrict.rs  seccomp.rs  temp.rs  verify.rs
tests/: e2e.rs  proxy_escape.rs  proxy_resilience.rs  sandbox_escape.rs
